--- a/portfolio-photo/src/assets/main.css
+++ b/portfolio-photo/src/assets/main.css
@@ -1,4 +1,5 @@
 @import './base.css';
+@import "https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css";
 
 #app {
   max-width: 1280px;
@@ -29,7 +30,35 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
     padding: 0 2rem;
   }
+  .header{
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+  }
+  .wrapper{
+    display: grid;
+    /* justify-content: space-around; */
+
+    grid-template-columns:1fr 2fr;
+    padding: 0 2rem;
+  }
+  
+}
+.nav{
+display: flex;
+justify-content: space-between;
+align-items: flex-end;
+}
+.portrait{
+  width: 200px;
+  height: 320px;
+}
+.paysage{
+  width: 320px;
+  height: 200px;
+}
+.debug{
+visibility: collapse;
 }
